@@ -71,6 +71,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Fixed misleading response to an email approval of a held message.
+      Bug #889968.
+
     - Added masthead.txt to the list of templates that can be edited via the
       web admin interface.  Bug #266805.
 
